Changed one content of a <p>

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       data-aos-easing="ease-in-sine"
       data-aos-duration="600"
     >
-      <h1>Candy One-One</h1>
+      <h1>Candy One</h1>
       <img class="image" src="media/candy1.jpg" alt="" />
     </div>
     <div
